--- a/contact.html
+++ b/contact.html
@@ -132,6 +132,74 @@
                             frameborder="0" style="min-height: 400px; border:0;" allowfullscreen="" aria-hidden="false"
                             tabindex="0"></iframe>
                     </div>
+			
+			
+			
+			 <!-- Footer -->
+    <footer id="contact" class="text-center footer-above" style="background-image: url(img/shuttle.jpeg); background-size: cover;">
+        <div class="arrow-down-white"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div style="position:relative;z-index:999" class="title-overview">
+                        <h2>
+                            <span class="border-white color-white">Contact</span>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- <div id="test1" class="gmap3"></div> -->
+
+
+
+                <div class="col-md-8 col-md-offset-2">
+                    <!-- <address class="text-center nest-address">
+                        <i class="icon-location"></i>&nbsp;Thane
+                        <i class="icon-home"></i>&nbsp;Maharashtra, CA 94107
+                        <abbr title="Phone">
+                            <i class="icon-phone"></i>
+                        </abbr>&nbsp;
+                    </address> -->
+
+                    <form role="form" style="position:relative;z-index:9999;" method="POST" action="https://formspree.io/hiresarvesh@gmail.com">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <input type="text" name="name" class="form-control form-footer" placeholder="Your Name">
+                            </div>
+                            <div class="col-md-6">
+                                <input type="text" name="_subject" class="form-control form-footer" placeholder="Subject">
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <input type="text" name="_replyto" class="form-control form-footer" placeholder="Email">
+                            </div>
+
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-12">
+
+                                <textarea class="form-control form-footer" name="message" rows="5" placeholder="Message"></textarea>
+                            </div>
+
+                        </div>
+
+                        <br>
+                        <button type="submit" class="btn bg-black text-center">Submit</button>
+
+                    </form>
+                    <br>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+			
+			<!-- -->
+		<!-- 
                     <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.5s">
                             <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
@@ -172,7 +240,7 @@
             </div>
         </div>
         <!-- Contact End -->
-
+-->
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
