--- a/contact.html
+++ b/contact.html
@@ -199,11 +199,11 @@
     </footer>
 			
 			<!-- -->
-		<!-- 
+		 
                     <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.5s">
                             <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
-                            <form>
+                             <form role="form" style="position:relative;z-index:9999;" method="POST" action="https://formspree.io/f/xyyonyvd">
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
@@ -240,7 +240,7 @@
             </div>
         </div>
         <!-- Contact End -->
--->
+ 
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
