--- a/contact.html
+++ b/contact.html
@@ -137,45 +137,43 @@
 		 	
 			
 		 
-                    <div class="col-md-6">
+                          <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.5s">
                             <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
                              <form role="form" style="position:relative;z-index:9999;" method="POST" action="https://formspree.io/f/xyyonyvd">
-                                <div class="row g-3">
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                            <label for="name">Your Name</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                            <label for="email">Your Email</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                            <label for="subject">Subject</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
-                                            <label for="message">Message</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                                    </div>
-                                </div>
-                            </form>
+                                <div class="row">
+                            <div class="col-md-6">
+                                <input type="text" name="name" class="form-control form-footer" placeholder="Your Name">
+                            </div>
+                            <div class="col-md-6">
+                                <input type="text" name="_subject" class="form-control form-footer" placeholder="Subject">
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <input type="text" name="_replyto" class="form-control form-footer" placeholder="Email">
+                            </div>
+
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-12">
+
+                                <textarea class="form-control form-footer" name="message" rows="5" placeholder="Message"></textarea>
+                            </div>
+
+                        </div>
+
+                        <br>
+                        <button type="submit" class="btn bg-black text-center">Submit</button>
+
+                    </form>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
         <!-- Contact End -->
  
 
