--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
                         </div>
 
                         <br>
-                        <button type="submit" class="btn bg-black text-center">Submit</button>
+                      <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
 
                     </form>
                         </div>
