--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Contact For Any Query</h1>
-                <div class="row g-4">
+               <!-- <div class="row g-4">
                     <div class="col-12">
                         <div class="row gy-4">
                             <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
@@ -125,7 +125,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <iframe class="position-relative rounded w-100 h-100"
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d120562.31042818939!2d72.93141990784798!3d19.213878646221378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b8fcfe76fd59%3A0xcf367d85f7c50283!2sThane%2C%20Maharashtra%2C%20India!5e0!3m2!1sen!2sjp!4v1649507195269!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
@@ -139,7 +139,7 @@
 		 
                           <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.5s">
-                            <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                           
                              <form role="form" style="position:relative;z-index:9999;" method="POST" action="https://formspree.io/f/xyyonyvd">
                                 <div class="row">
                             <div class="col-md-6">
