--- a/contact.html
+++ b/contact.html
@@ -97,10 +97,10 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Contact For Any Query</h1>
-               <!-- <div class="row g-4">
+               <div class="row g-4">
                     <div class="col-12">
                         <div class="row gy-4">
-                            <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
+                           <!--  <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="d-flex align-items-center bg-light rounded p-4">
                                     <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3" style="width: 45px; height: 45px;">
                                         <i class="fa fa-map-marker-alt text-primary"></i>
